CRUD done and refactored

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,8 @@
-<form action="/products/1" method="post">
+<%= render "form" %>
+
+
+
+<!-- <form action="/products/1" method="post">
 
   <label for="name">Name of the product</label>
   <input type="text" name="product[name]">
