--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,11 @@
-<form action="/products" method="post">
+<%= render "form" %>
+
+
+
+
+
+
+<!--<form action="/products" method="post">
 
   <label for="name">Name of the product</label>
   <input type="text" name="product[name]">
