--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class></div>
+
+<div class="banner" >
+  <div class="banner-content text-center">
+    <h1>Escape to nature</h1>
+    <p>Clear your mind. Breathe in some fresh air. Nourish your soul in the mountains of Minas Gerais.</p>
+  </div>
+</div>
