--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,5 +2,6 @@
   <h2><%= @product.name %></h2>
   <p><%= @product.category %></p>
   <p><%= @product.description%></p>
+  <p><%= @product.price%></p>
 
   <%= link_to "Back to all products", products_path %>
