--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,1 +1,6 @@
-@import "banner";
+// Import your components CSS files here.
+@import "alert";
+@import "navbar";
+@import "footer";
+@import "card";
+@import "banner"
