--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,15 +1,82 @@
-.navbar {
+/* Main navbar */
+.navbar-farm {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
-  height: 85px;
+  height: 170px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  a {
-    text-decoration: none;
-    color: #B7B2B7;
-  }
- }
+}
 
+/* Logo */
+.navbar-farm-brand {
+  img {
+  height: 50px;
+  }
+}
+
+/* User Avatar */
+.navbar-farm .avatar {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+}
+
+/* Right section */
+.navbar-farm-right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Basic navbar item */
+.navbar-farm-item {
+  cursor: pointer;
+  padding: 0 20px;
+}
+
+/* Navbar link */
+.navbar-farm-link {
+  color: #999699;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  &:hover {
+    color: #000000;
+    text-decoration: none;
+  }
+}
+
+
+/* Dropdown menu */
+.navbar-farm-dropdown-menu {
+  margin-top: 15px;
+  box-shadow: 1px 1px 4px #E6E6E6;
+  border-color: #E6E6E6;
+}
+.navbar-farm-dropdown-menu li > a {
+  transition: color 0.3s ease;
+  font-weight: lighter !important;
+  color: #999999 !important;
+  font-size: 15px !important;
+  line-height: 22px !important;
+  padding: 10px 20px;
+}
+.navbar-farm-dropdown-menu li > a:hover {
+  background: transparent !important;
+  color: black !important;
+}
+.navbar-farm-dropdown-menu:before {
+  content: ' ';
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  right: 10px;
+  top: -6px;
+  background-color: white;
+  transform: rotate(45deg);
+  border-left: 1px solid #E6E6E6;
+  border-top: 1px solid #E6E6E6;
+}
