--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FazendaGuatambu</title>
+
   <%= csrf_meta_tags %>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+<title>FazendaGuatambu</title>
+
 </head>
 
 <body>
 
 
-  <div class="navbar">
-    <%= image_tag "pine-logo.png" %>
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">Fazenda Guatambu</a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li><%= link_to "Explore the Farm", explore_the_farm_path %></li>
-            <li><%= link_to "Activities", activities_path %></li>
-            <li><%= link_to "Our Products", products_path %></li>
-            <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Reservations", reservations_path %></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <%= yield %>
-
-  <p>This is the footer</p>
+    <%= render "shared/navbar" %>
+    <%= yield %>
+    <%= render "shared/footer" %>
 
 
 </body>
